Test works with flink run but not works intelliJ